优化UI，提供带位置输入提示直接展示，需要搜索关键字进行poi搜索

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <fragment
         android:id="@+id/map"
         class="com.amap.api.maps.SupportMapFragment"
@@ -10,25 +11,44 @@
         android:layout_height="match_parent" />
 
 
-    <TextView
-        android:id="@+id/main_keywords"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/text_search"
-        android:layout_margin="10dp"
-        android:clickable="true"
-        android:completionThreshold="1"
-        android:dropDownVerticalOffset="1.0dip"
-        android:hint="请输入关键字"
-        android:imeOptions="actionDone"
-        android:inputType="text|textAutoComplete"
-        android:maxLength="20"
-        android:paddingRight="37.0dip"
-        android:singleLine="true"
-        android:textColor="#000000"
-        android:textColorHint="@color/darkgrey"
-        android:textSize="16.0sp" />
+        android:layout_height="48dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/white">
 
+        <ImageView
+            android:id="@+id/clean_keywords"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:src="@mipmap/ic_close"
+            android:visibility="gone"
+            />
 
+        <TextView
+            android:id="@+id/main_keywords"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@+id/clean_keywords"
 
+            android:clickable="true"
+            android:completionThreshold="1"
+            android:drawableLeft="@mipmap/ic_search"
+            android:dropDownVerticalOffset="1.0dip"
+            android:gravity="center_vertical"
+            android:hint="关键字搜索"
+            android:imeOptions="actionDone"
+            android:inputType="text|textAutoComplete"
+            android:maxLength="20"
+            android:paddingLeft="10dp"
+            android:singleLine="true"
+            android:textColor="#000000"
+            android:textColorHint="@color/text_hint"
+            android:textSize="16.0sp" />
+
+    </RelativeLayout>
 </RelativeLayout>
