--- a/app/src/main/res/layout/activity_input_tips.xml
+++ b/app/src/main/res/layout/activity_input_tips.xml
@@ -1,32 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/grey"
     android:orientation="vertical"
+    android:padding="5dp"
     tools:context="com.amap.placesearch.InputTipsActivity">
 
-    <AutoCompleteTextView
-        android:id="@+id/keyWord"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/text_search"
-        android:completionThreshold="1"
-        android:dropDownVerticalOffset="1.0dip"
-        android:hint="请输入关键字"
-        android:imeOptions="actionDone"
-        android:inputType="text|textAutoComplete"
-        android:maxLength="20"
-        android:paddingRight="37.0dip"
-        android:singleLine="true"
-        android:textColor="#000000"
-        android:textColorHint="@color/darkgrey"
-        android:textSize="16.0sp" />
+        android:layout_height="48dp"
+        android:background="@color/white"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/back"
+            android:layout_width="56dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="2dp"
+            android:background="@drawable/back"
+            android:scaleType="center"
+            android:src="@mipmap/ic_arrow_back" />
+
+        <android.support.v7.widget.SearchView
+            android:id="@+id/keyWord"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:imeOptions="actionSearch"
+            android:inputType="textCapWords"
+            android:singleLine="true"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            app:queryHint="请输入关键字"
+            app:searchIcon="@null" />
+    </LinearLayout>
 
     <ListView
         android:id="@+id/inputtip_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp">
 
     </ListView>
 
