--- a/app/src/main/res/layout/adapter_inputtips.xml
+++ b/app/src/main/res/layout/adapter_inputtips.xml
@@ -5,7 +5,9 @@
     android:orientation="vertical"
     android:paddingBottom="10dp"
     android:paddingLeft="10dp"
-    android:paddingTop="10dp">
+    android:paddingTop="10dp"
+    android:background="@color/white"
+    >
 
     <TextView
         android:id="@+id/name"
